# codes

./: .gitignore  .rgignore  AGENTS.md  CHANGELOG.md  README.md  build-fast.sh  codes  codes.cmd  config.toml.example  defs.bzl  justfile  package.json  pnpm-lock.yaml  pre-release.sh
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: 2-bug-report.yml
.github/workflows/: issue-code.yml  issue-comment.yml  issue-triage.yml  preview-build.yml  release.yml  rust-ci.yml  upstream-merge.yml
KO/交接文档/: 国际化汉化交接说明.md  国际化汉化快速操作指南.md  持续式国际化采集工作流.md
code-rs/: Cargo.toml  MIGRATION_GUIDE.md  MIGRATION_QUICK_REFERENCE.md  README.md  config.md  default.nix  justfile  migrate-crate.sh
code-rs/ansi-escape/: Cargo.toml
code-rs/backend-client/: Cargo.toml
code-rs/browser/: Cargo.toml
code-rs/cli/: Cargo.toml
code-rs/cloud-tasks/: Cargo.toml
code-rs/cloud-tasks-client/: Cargo.toml
code-rs/cloud-tasks-client/src/: http.rs  lib.rs
code-rs/common/: Cargo.toml
code-rs/core/: Cargo.toml  README.md  gpt-5.2-codex_prompt.md  gpt_5_2_prompt.md  prompt_coder.md  prompt_coordinator.md
code-rs/docs/: codex_mcp_interface.md
code-rs/exec/: Cargo.toml
code-rs/execpolicy/: Cargo.toml
code-rs/git-apply/: Cargo.toml
code-rs/i18n/: Cargo.toml  TRANSLATION_CHECKLIST.md  scan_baseline.json  scan_current.json
code-rs/i18n-scan/: Cargo.toml
code-rs/i18n-scan/src/: main.rs
code-rs/login/: Cargo.toml
code-rs/process-hardening/: Cargo.toml
code-rs/protocol/: Cargo.toml
code-rs/tui/: Cargo.toml  build.rs  prompt_for_auto_drive_session_summary.md
code-rs/utils/i18n-scan/: Cargo.toml
code-rs/utils/i18n-scan/src/: main.rs
codex-cli/: package-lock.json  package.json  postinstall.js
codex-cli/scripts/: README.md
codex-cli/test/: postinstall.test.js
codex-rs/: Cargo.toml
docs/: CODES_TODO.md  CODES_开发计划.md  advanced.md  agents.md  authentication.md  auto-drive.md  config.md  example-config.md  exec.md  execpolicy.md  faq.md  getting-started.md  i18n.md  index.md  install.md  integration-zed.md  performance-and-interactivity.md  platform-sandboxing.md  prompts.md  sandbox.md  settings.md  skills.md  slash-commands.md  tui-alternate-screen.md  万能补丁机制-PatchKit.md  交接文档.md  最高权限与长任务.md  需求记录.md
docs/release-notes/: RELEASE_NOTES.md
patches/: codes-features.patch
scripts/: check-codex-path-deps.sh  check-release-notes-version.sh  ci-tests.sh  codes-shim.rs  codes-sync.ps1  codes.ps1  com.code.memwatch.plist  generate-homebrew-formula.sh  install-codes.ps1  install-codes.sh  install-windows-launcher.ps1  memdump.sh  memdump_watch.sh  wait-for-gh-run.sh
scripts/codes-patch/: apply.ps1  export.ps1
scripts/i18n/: merge-assets.mjs  merge-assets.ps1
scripts/upstream-merge/: highlight-critical-changes.sh
(+396 files in other folders)
