[package]
name = "code-backend-client"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
code-backend-openapi-models = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
