[package]
name = "code-cloud-tasks-client"
version = { workspace = true }
edition = "2024"

[lib]
name = "code_cloud_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["online"]
online = ["dep:code-backend-client"]
mock = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
diffy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
code-backend-client = { workspace = true, optional = true }
code-git-apply = { workspace = true }
