[package]
name = "code-i18n-scan"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
code-i18n = { workspace = true }
ignore = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }

