[package]
edition = "2024"
name = "code-process-hardening"
version = { workspace = true }

[lib]
name = "code_process_hardening"
path = "src/lib.rs"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
